tests/expectations/compiler/dynamic_call/dynamic_call_in_conditional_fail.out
Error [ETYC0372184]: Dynamic calls cannot be used inside a conditional branch.
    --> compiler-test:13:20
     |
  13 |             return Adder@(target)/sum(x, y);
     |                    ^^^^^^^^^^^^^^^^^^^^^^^^
     |
     = Move the dynamic call outside the `if`/`else` block.
